# labyrinthine

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
labyrinthine/: __init__.py  depth_first.py
src/labyrinthine/: __init__.py  depth_first.py
