[project]
name = "labyrinthine"
version = "0.1.7"
description = """A no-dependency library that generates all the mazes you need."""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.5"
license = { file = "LICENSE" }
authors = [
    { name = "Roberto Schiavone", email = "hello@robertoschiavone.io" },
]
maintainers = [
    { name = "Roberto Schiavone", email = "hello@robertoschiavone.io" },
]
keywords = ["Procedural Generation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
homepage = "https://github.com/robertoschiavone/labyrinthine"
documentation = "https://github.com/robertoschiavone/labyrinthine"
repository = "https://github.com/robertoschiavone/labyrinthine.git"
changelog = "https://github.com/robertoschiavone/labyrinthine/releases"
